<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.dataease</groupId>
        <artifactId>extensions</artifactId>
        <version>${dataease.version}</version>
    </parent>

    <artifactId>extensions-view</artifactId>

    <dependencies>
        <dependency>
            <groupId>io.dataease</groupId>
            <artifactId>extensions-datasource</artifactId>
            <version>${dataease.version}</version>
        </dependency>
    </dependencies>
    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>
